--- a/css/abaque-magique.css
+++ b/css/abaque-magique.css
@@ -50,6 +50,7 @@
 .abaque-v2-header {
     text-align: center;
     font-family: 'Fredoka', sans-serif;
+    margin-bottom: -0.8rem;
 }
 
 .abaque-v2-progress {
